--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
@@ -62,6 +63,7 @@ button:hover{background:#256428}
   margin-top:15px;
   font-weight:bold;
   color:#2e7d32;
+  white-space:pre-line;
 }
 .escudo{
   display:block;
@@ -132,127 +134,189 @@ button:hover{background:#256428}
 
 <script>
 /* =========================
-   CONFIGURAÇÕES GERAIS
+   VARIÁVEIS GLOBAIS
 ========================= */
-const PONTUACAO_MAXIMA_REGRA = 60;
+let jogador = {};
+let pontos = 0;
+let regraAtual = 0;
+
+/* =========================
+   CONFIGURAÇÕES
+========================= */
 const PONTUACAO_MINIMA = 42; // 70%
+
+/* =========================
+   MAPA MENSAL
+========================= */
+const regrasPorMes = {
+  0:[0,1],1:[2],2:[3],3:[4],4:[5],5:[6],
+  6:[7],7:[8],8:[9],9:[10],10:[11]
+};
 
 /* =========================
    NÍVEIS DE PREVENÇÃO
 ========================= */
 const niveis = [
-  { nivel: 1, nome: "Atenção Básica", regras: [0,1] },
-  { nivel: 2, nome: "Prevenção Essencial", regras: [2,3,4,5] },
-  { nivel: 3, nome: "Segurança Estruturada", regras: [6,7,8,9] },
-  { nivel: 4, nome: "Saúde Segura", regras: [10,11] }
+  { nivel:1, nome:"Atenção Básica", regras:[0,1] },
+  { nivel:2, nome:"Prevenção Essencial", regras:[2,3,4,5] },
+  { nivel:3, nome:"Segurança Estruturada", regras:[6,7,8,9] },
+  { nivel:4, nome:"Saúde Segura", regras:[10,11], final:true }
 ];
 
 /* =========================
-   CONCLUSÃO DA REGRA
+   REGRAS (exemplo 1 e 2)
+========================= */
+const regras = [
+  {titulo:"Regra 01 – Atenção no Trajeto",p:[
+    ["Manter atenção no trajeto reduz acidentes.",true],
+    ["Usar celular ao caminhar não traz riscos.",false],
+    ["Distração aumenta o risco de quedas.",true],
+    ["Cansaço não interfere na segurança.",false],
+    ["Olhar o caminho ajuda a identificar riscos.",true],
+    ["Ignorar obstáculos é seguro.",false]
+  ]},
+  {titulo:"Regra 02 – Olhos no Caminho",p:[
+    ["Observar o caminho ajuda a identificar riscos.",true],
+    ["Distrações aumentam risco de quedas.",true],
+    ["Olhar o caminho elimina todos os riscos.",false],
+    ["Pisos molhados exigem atenção redobrada.",true],
+    ["Caminhar olhando o celular é seguro.",false],
+    ["Objetos no chão causam tropeços.",true]
+  ]}
+];
+
+/* =========================
+   FUNÇÕES BASE
+========================= */
+function regraLiberada(i){
+  return regrasPorMes[new Date().getMonth()]?.includes(i);
+}
+
+function start(){
+  const nome=document.getElementById("nome").value.trim();
+  const unidade=document.getElementById("unidade").value;
+  if(!nome||!unidade){alert("Preencha nome e unidade");return;}
+  jogador={nome,unidade};
+  pontos=0; regraAtual=0;
+  document.getElementById("login").classList.add("hidden");
+  document.getElementById("jogo").classList.remove("hidden");
+  carregarRegra();
+}
+
+function carregarRegra(){
+  document.getElementById("mensagem").innerText="";
+  if(!regraLiberada(regraAtual)){
+    document.getElementById("tituloRegra").innerText="⏳ Regra ainda não liberada";
+    document.getElementById("perguntas").innerHTML=
+      "<p>Aguarde a próxima regra mensal para continuar.</p>";
+    return;
+  }
+  const r=regras[regraAtual];
+  document.getElementById("tituloRegra").innerText=r.titulo;
+  const div=document.getElementById("perguntas");
+  div.innerHTML="";
+  r.p.forEach((q,i)=>{
+    div.innerHTML+=`
+      <div class="question">
+        <p>${i+1}. ${q[0]}</p>
+        <label><input type="radio" name="q${i}" value="true"> Verdadeiro</label><br>
+        <label><input type="radio" name="q${i}" value="false"> Falso</label>
+      </div>`;
+  });
+}
+
+/* =========================
+   CONCLUSÃO COM 70%
 ========================= */
 function concluirRegra(){
-  if(!regraLiberada(regraAtual)) return;
-
-  let pontosRegra = 0;
-
+  let pontosRegra=0;
   document.querySelectorAll(".question").forEach((q,i)=>{
-    const marcada = document.querySelector(`input[name="q${i}"]:checked`);
-    const correta = regras[regraAtual].p[i][1];
-
-    if(marcada && (marcada.value === "true") === correta){
-      pontosRegra += 10;
-      q.classList.add("correct");
-    } else {
-      q.classList.add("wrong");
-    }
+    const m=document.querySelector(`input[name="q${i}"]:checked`);
+    if(m && (m.value==="true")===regras[regraAtual].p[i][1]){
+      pontosRegra+=10; q.classList.add("correct");
+    }else q.classList.add("wrong");
   });
 
-  // ❌ Não atingiu 70%
-  if(pontosRegra < PONTUACAO_MINIMA){
-    document.getElementById("mensagem").innerText =
-      `❌ Pontuação insuficiente (${pontosRegra}/${PONTUACAO_MAXIMA_REGRA}).\n` +
-      `É necessário no mínimo 70% para concluir esta regra.`;
+  if(pontosRegra<PONTUACAO_MINIMA){
+    document.getElementById("mensagem").innerText=
+      `❌ Pontuação insuficiente (${pontosRegra}/60).\nÉ necessário no mínimo 70%.`;
     return;
   }
 
-  // ✅ Aprovado
-  pontos += pontosRegra;
+  pontos+=pontosRegra;
   salvarRanking();
   salvarSelo(regraAtual);
   verificarCertificadoNivel();
 
-  document.getElementById("mensagem").innerText =
+  document.getElementById("mensagem").innerText=
     `✅ Regra concluída!\nPontuação da regra: ${pontosRegra} pts`;
 
   regraAtual++;
-  setTimeout(carregarRegra, 1500);
+  setTimeout(carregarRegra,1500);
 }
 
 /* =========================
-   SELOS POR REGRA
+   RANKING
 ========================= */
-function salvarSelo(regraIndex){
-  let selos = JSON.parse(localStorage.getItem("selos")) || [];
-  if(!selos.includes(regraIndex)){
-    selos.push(regraIndex);
-    localStorage.setItem("selos", JSON.stringify(selos));
-  }
+function salvarRanking(){
+  let r=JSON.parse(localStorage.getItem("ranking"))||[];
+  r.push({nome:jogador.nome,unidade:jogador.unidade,pontos});
+  localStorage.setItem("ranking",JSON.stringify(r));
+  carregarRanking();
+}
+
+function carregarRanking(){
+  let r=JSON.parse(localStorage.getItem("ranking"))||[];
+  r.sort((a,b)=>b.pontos-a.pontos);
+  document.getElementById("ranking").innerHTML=
+    "<ol>"+r.map(x=>`<li>${x.nome} (${x.unidade}) – ${x.pontos} pts</li>`).join("")+"</ol>";
+}
+
+/* =========================
+   SELOS
+========================= */
+function salvarSelo(i){
+  let s=JSON.parse(localStorage.getItem("selos"))||[];
+  if(!s.includes(i)){s.push(i);}
+  localStorage.setItem("selos",JSON.stringify(s));
   carregarSelos();
 }
 
 function carregarSelos(){
-  const div = document.getElementById("selos");
-  if(!div) return;
-
-  let selos = JSON.parse(localStorage.getItem("selos")) || [];
-  div.innerHTML = "";
-
-  if(selos.length === 0){
-    div.innerHTML = "<p>Nenhum selo conquistado ainda.</p>";
-    return;
-  }
-
-  selos.forEach(i=>{
-    div.innerHTML += `
-      <div class="selo">
-        🏅<br>
-        ${regras[i].titulo}
-      </div>
-    `;
-  });
+  const d=document.getElementById("selos");
+  let s=JSON.parse(localStorage.getItem("selos"))||[];
+  d.innerHTML=s.length
+    ? s.map(i=>`<div class="selo">🏅<br>${regras[i].titulo}</div>`).join("")
+    : "<p>Nenhum selo conquistado ainda.</p>";
 }
 
 /* =========================
    CERTIFICADO POR NÍVEL
 ========================= */
 function verificarCertificadoNivel(){
-  const selos = JSON.parse(localStorage.getItem("selos")) || [];
-  let certificados = JSON.parse(localStorage.getItem("certificados")) || [];
+  const selos=JSON.parse(localStorage.getItem("selos"))||[];
+  let certificados=JSON.parse(localStorage.getItem("certificados"))||[];
 
-  niveis.forEach(nivel=>{
-    const concluiuNivel = nivel.regras.every(r => selos.includes(r));
-    const jaGerado = certificados.includes(nivel.nivel);
-
-    if(concluiuNivel && !jaGerado){
-      certificados.push(nivel.nivel);
-      localStorage.setItem("certificados", JSON.stringify(certificados));
-      gerarCertificado(nivel);
+  niveis.forEach(n=>{
+    if(n.regras.every(r=>selos.includes(r)) && !certificados.includes(n.nivel)){
+      certificados.push(n.nivel);
+      localStorage.setItem("certificados",JSON.stringify(certificados));
+      gerarCertificado(n);
     }
   });
 }
 
-/* =========================
-   GERAÇÃO DO CERTIFICADO
-========================= */
-function gerarCertificado(nivel){
+function gerarCertificado(n){
   alert(
-    `🎓 CERTIFICADO CONQUISTADO!\n\n` +
-    `${jogador.nome}\n` +
-    `concluiu o ${nivel.nivel}º Nível da Prevenção\n` +
-    `${nivel.nome}\n\n` +
+    `🎓 CERTIFICADO CONQUISTADO!\n\n${jogador.nome}\n`+
+    `concluiu o ${n.nivel}º Nível da Prevenção\n${n.nome}\n\n`+
     `Campanha: 12 Regras de Ouro para um Ano Mais Seguro`
   );
 }
+
+carregarRanking();
+carregarSelos();
 </script>
+
 </body>
 </html>
