--- a/index.html
+++ b/index.html
@@ -189,6 +189,86 @@ const regras = [
     ["Pisos molhados exigem atenção redobrada.",true],
     ["Caminhar olhando o celular é seguro.",false],
     ["Objetos no chão causam tropeços.",true]
+  ]},
+  {titulo:"Regra 03 – Ergonomia Sempre",p:[
+    ["Ajustar cadeira reduz desconfortos.",true],
+    ["Dor faz parte do trabalho.",false],
+    ["Postura inadequada gera lesões.",true],
+    ["Pausas ajudam a saúde.",true],
+    ["Ergonomia só vale para quem senta.",false],
+    ["Ergonomia melhora produtividade.",true]
+  ]},
+  {titulo:"Regra 04 – Zero Improviso",p:[
+    ["Improvisar ferramentas gera riscos.",true],
+    ["Usar equipamento errado é seguro.",false],
+    ["Improviso é aceitável se rápido.",false],
+    ["Planejar reduz erros.",true],
+    ["Falta de equipamento justifica improviso.",false],
+    ["Seguir procedimentos previne acidentes.",true]
+  ]},
+  {titulo:"Regra 05 – Organização Salva Vidas",p:[
+    ["Ambientes organizados reduzem acidentes.",true],
+    ["Objetos fora do lugar não interferem.",false],
+    ["Organização ajuda em emergências.",true],
+    ["Cabos soltos aumentam quedas.",true],
+    ["Organização é só da limpeza.",false],
+    ["Corredores livres são medida de segurança.",true]
+  ]},
+  {titulo:"Regra 06 – Comunicação é Segurança",p:[
+    ["Comunicar riscos previne acidentes.",true],
+    ["Problemas devem ser comunicados.",true],
+    ["Comunicação não influencia segurança.",false],
+    ["Silêncio pode gerar acidentes.",true],
+    ["Só líderes comunicam riscos.",false],
+    ["Comunicação fortalece a segurança.",true]
+  ]},
+  {titulo:"Regra 07 – Use EPI Sempre",p:[
+    ["EPI reduz riscos.",true],
+    ["EPI só em atividades perigosas.",false],
+    ["Não usar EPI causa acidentes.",true],
+    ["EPI deve estar em bom estado.",true],
+    ["EPI é opcional se risco for pequeno.",false],
+    ["EPI protege o trabalhador.",true]
+  ]},
+  {titulo:"Regra 08 – Saúde Mental Importa",p:[
+    ["Saúde mental influencia segurança.",true],
+    ["Estresse aumenta risco.",true],
+    ["Falar de saúde mental é fraqueza.",false],
+    ["Descanso melhora concentração.",true],
+    ["Ignorar cansaço não traz impacto.",false],
+    ["Bem-estar ajuda decisões seguras.",true]
+  ]},
+  {titulo:"Regra 09 – Segurança Contra Incêndio",p:[
+    ["Conhecer rotas é prevenção.",true],
+    ["Extintores devem estar acessíveis.",true],
+    ["Incêndios não acontecem em locais organizados.",false],
+    ["Treinamentos ajudam na emergência.",true],
+    ["Bloquear saídas é aceitável.",false],
+    ["Prevenção reduz danos.",true]
+  ]},
+  {titulo:"Regra 10 – Compromisso Coletivo",p:[
+    ["Segurança é responsabilidade de todos.",true],
+    ["Ignorar atitudes inseguras é aceitável.",false],
+    ["Trabalho em equipe fortalece segurança.",true],
+    ["Cada pessoa influencia o ambiente.",true],
+    ["Só a empresa é responsável.",false],
+    ["Compromisso coletivo reduz acidentes.",true]
+  ]},
+  {titulo:"Regra 11 – Biossegurança (NR32)",p:[
+    ["NR32 protege trabalhadores da saúde.",true],
+    ["EPI faz parte da biossegurança.",true],
+    ["Riscos biológicos não exigem cuidado.",false],
+    ["Higienização previne contaminação.",true],
+    ["Acidentes biológicos devem ser comunicados.",true],
+    ["Biossegurança protege pacientes.",true]
+  ]},
+  {titulo:"Regra 12 – Estrutura Segura",p:[
+    ["Estrutura segura reduz riscos.",true],
+    ["Manutenção influencia segurança.",true],
+    ["Estrutura danificada não oferece risco.",false],
+    ["Sinalização previne acidentes.",true],
+    ["Ignorar falhas é aceitável.",false],
+    ["Estrutura segura protege todos.",true]
   ]}
 ];
 
